Fix notifications on mobile devices, closes #311, #325.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,6 +107,11 @@
     margin: 2em 0;
 }
 
+@media (max-width: 414px) {
+    .notification-subscription-group {
+        padding: 1em;
+    }
+}
 
 .notification-subscription-group .govuk-button {
     border: 2px solid #3a67e8;
